package interface_adapter;

import entity.Recipe;

import java.util.ArrayList;

public class RecipeViewModel {
    private ArrayList<Recipe> recipe = new ArrayList<>();
    public RecipeViewModel() {
    }



}
