package interface_adapter.browse;

public class BrowseController {
}
