package interface_adapter.browse;

import use_case.browse.BrowseOutputBoundary;

public class BrowsePresenter implements BrowseOutputBoundary {
}
