package use_case.browse;

public interface BrowseDataAccessInterface {

    void execute(BrowseInputData browseInputData);

}
