package use_case.browse;

public class BrowseInputData {
}
