package use_case.browse;

public class BrowseInteractor implements BrowseInputBoundary {
}
