package use_case.browse;

public interface BrowseOutputBoundary {
}
