package use_case.browse;

public class BrowseOutputData {
}
