@startuml
!pragma layout smetana

class BrowseInteractor {

}

interface BrowseDataAccessInterface {

}

class SavedRecipesDataAccessObject {

}

class BrowseInputData {

}

interface BrowseInputBoundary {

}

class BrowseOutputData {

}

interface BrowseOutputBoundary {

}

class BrowseController {

}

class BrowsePresenter {

}

abstract class ViewModel
'class CreateViewModel
class MainViewModel
class RecommendationViewModel
class RecipeViewModel

'class CreateView

class MainView

class RecommendationView

class RecipeView


BrowseInteractor ..|> BrowseInputBoundary
BrowseInteractor --o BrowseOutputBoundary
BrowseInteractor --o BrowseDataAccessInterface
BrowseInteractor ..> BrowseInputData
BrowseInteractor ..> BrowseOutputData

BrowseController ..> BrowseInputData
BrowseController --o BrowseInputBoundary
BrowsePresenter ..|> BrowseOutputBoundary
BrowsePresenter --o BrowseViewModel
BrowsePresenter ..> BrowseOutputData

MainViewModel --|> ViewModel
'CreateViewModel --|> ViewModel
RecipeViewModel --|> ViewModel
RecommendationViewModel --|> ViewModel

MainView --o MainViewModel
'CreateView --o CreateViewModel
RecipeView --o RecipeViewModel
RecommendationView --o RecommendationViewModel

MainView ..> BrowseController
'CreateView ..> BrowseController
RecipeView ..> BrowseController
RecommendationView ..> BrowseController


SavedRecipesDataAccessObject ..|> BrowseDataAccessInterface

@enduml